# BBSIM

./: .gitignore  README.md  RESEARCH_REPORT.md  bsm.cmd  dev.ps1  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/firm/: README.md  app.zon  build.zig  build.zig.zon  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/firm/src/: App.tsx  main.zig  runner.zig
apps/firm/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/firm/src-tauri/icons/: icon.icns
apps/firm/src-tauri/src/: lib.rs  main.rs
apps/firm/src/components/: AllOrders.tsx  AllPositions.tsx  Dashboard.tsx  ExchangeControl.tsx  Login.tsx  (+3 more)
apps/trader/: README.md  app.zon  build.zig  build.zig.zon  index.html  package.json  vite.config.ts
apps/trader/src/: App.tsx  main.zig  runner.zig
apps/trader/src-tauri/: Cargo.toml  tauri.conf.json
bridge/: requirements.txt  server.py
desktop/firm/: app.zon  build.zig  start.js
desktop/firm/src/: main.zig
desktop/trader/: app.zon  build.zig  start.js
desktop/trader/src/: main.zig
scripts/linux/: dev-all.sh  dev-firm.sh  dev-trader.sh
scripts/windows/: dev-all.ps1  dev-firm.ps1  dev-trader.ps1  start.ps1
src/: App.css  App.tsx  index.css  main.tsx
src/components/: ExchangeSelector.tsx  MarketWatch.tsx  OrderBook.tsx  OrderEntry.tsx  Positions.tsx  TradeHistory.tsx
src/context/: ExchangeContext.tsx
src/db/: index.ts
src/hooks/: useMarketSimulator.ts  useOrderExecution.ts
src/providers/: binance.ts  bybit.ts  coinbase.ts  cryptofeed.ts  index.ts  simulated.ts  types.ts
(+22 files in other folders)
