[package]
name = "qalgo-app"
version = "1.0.0"
description = "QALGO Trading Platform"
authors = ["QALGO"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "qalgo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
